--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -12,26 +12,12 @@
 			<div class="row">
 				<div class="span4">
 					<a href="{{product.image.url}}" class="thumbnail" data-fancybox-group="group1" title="Description 1"><img alt="" src="{{product.image.url}}"></a>
-<!--					<ul class="thumbnails small">-->
-<!--&lt;!&ndash;						<li class="span1">&ndash;&gt;-->
-<!--&lt;!&ndash;							<a href="themes/images/ladies/2.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 2"><img src="themes/images/ladies/2.jpg" alt=""></a>&ndash;&gt;-->
-<!--&lt;!&ndash;						</li>&ndash;&gt;-->
-<!--&lt;!&ndash;						<li class="span1">&ndash;&gt;-->
-<!--&lt;!&ndash;							<a href="themes/images/ladies/3.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 3"><img src="themes/images/ladies/3.jpg" alt=""></a>&ndash;&gt;-->
-<!--&lt;!&ndash;						</li>&ndash;&gt;-->
-<!--&lt;!&ndash;						<li class="span1">&ndash;&gt;-->
-<!--&lt;!&ndash;							<a href="themes/images/ladies/4.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 4"><img src="themes/images/ladies/4.jpg" alt=""></a>&ndash;&gt;-->
-<!--&lt;!&ndash;						</li>&ndash;&gt;-->
-<!--&lt;!&ndash;						<li class="span1">&ndash;&gt;-->
-<!--&lt;!&ndash;							<a href="themes/images/ladies/5.jpg" class="thumbnail" data-fancybox-group="group1" title="Description 5"><img src="themes/images/ladies/5.jpg" alt=""></a>&ndash;&gt;-->
-<!--&lt;!&ndash;						</li>&ndash;&gt;-->
-<!--					</ul>-->
 				</div>
 				<div class="span5">
 					<address>
-						<strong>Category:</strong> <span>{{product.name}}</span><br>
+						<strong>Category:</strong> <span>{{product.category}}</span><br>
 						<strong>Product Code:</strong> <span>{{product.id}}</span><br>
-						<strong>Reward Points:</strong> <span>0</span><br>
+						<strong>Description:</strong> <span>{{product.description}}</span><br>
 						<strong>Availability:</strong> <span>
 						{% if product.status %}
 							Есть в наличие
@@ -82,68 +68,24 @@
 								<ul class="thumbnails listing-products">
 									<li class="span3">
 										<div class="product-box">
-											<span class="sale_tag"></span>
-											<a href="product_detail.html"><img alt="" src="themes/images/ladies/6.jpg"></a><br/>
-											<a href="product_detail.html" class="title">Wuam ultrices rutrum</a><br/>
-											<a href="#" class="category">Suspendisse aliquet</a>
-											<p class="price">$341</p>
+											{% for random_product in random_products %}
+											<a href="product_detail.html"><img alt="" src="{{random_product.image.url}}"></a><br/>
+											<a href="product_detail.html" class="title">{{random_product.name}}</a><br/>
+											<a href="#" class="category">Product code: {{random_product.id}}</a>
+											<p class="price">${{random_product.price}}</p>
+											{% endfor %}
 										</div>
 									</li>
-									<li class="span3">
-										<div class="product-box">
-											<span class="sale_tag"></span>
-											<a href="product_detail.html"><img alt="" src="themes/images/ladies/5.jpg"></a><br/>
-											<a href="product_detail.html" class="title">Fusce id molestie massa</a><br/>
-											<a href="#" class="category">Phasellus consequat</a>
-											<p class="price">$341</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<a href="product_detail.html"><img alt="" src="themes/images/ladies/4.jpg"></a><br/>
-											<a href="product_detail.html" class="title">Praesent tempor sem</a><br/>
-											<a href="#" class="category">Erat gravida</a>
-											<p class="price">$28</p>
-										</div>
-									</li>
+
 								</ul>
 							</div>
-							<div class="item">
-								<ul class="thumbnails listing-products">
-									<li class="span3">
-										<div class="product-box">
-											<span class="sale_tag"></span>
-											<a href="product_detail.html"><img alt="" src="themes/images/ladies/1.jpg"></a><br/>
-											<a href="product_detail.html" class="title">Fusce id molestie massa</a><br/>
-											<a href="#" class="category">Phasellus consequat</a>
-											<p class="price">$341</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<a href="product_detail.html"><img alt="" src="themes/images/ladies/2.jpg"></a><br/>
-											<a href="product_detail.html">Praesent tempor sem</a><br/>
-											<a href="#" class="category">Erat gravida</a>
-											<p class="price">$28</p>
-										</div>
-									</li>
-									<li class="span3">
-										<div class="product-box">
-											<span class="sale_tag"></span>
-											<a href="product_detail.html"><img alt="" src="themes/images/ladies/3.jpg"></a><br/>
-											<a href="product_detail.html" class="title">Wuam ultrices rutrum</a><br/>
-											<a href="#" class="category">Suspendisse aliquet</a>
-											<p class="price">$341</p>
-										</div>
-									</li>
-								</ul>
-							</div>
+
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-					{% include 'includs/category_card.html' %}
+		{% include 'includes/category_card.html' %}
 	</div>
 </section>
 {% endblock %}
