--- a/products/templates/product_detail.html
+++ b/products/templates/product_detail.html
@@ -28,6 +28,14 @@
 					</address>
 					<h4><strong>Price: ${{product.price}}</strong></h4>
 				</div>
+				<div class="span5">
+					<form class="form-inline" action="{% url 'cart_add' product.id %}" method="post">
+						{{cart_product_form.label}}
+						{{cart_product_form}}
+						{% csrf_token %}
+						<input class="btn btn-inverse" type="submit" value="Добавить в корзину">
+					</form>
+				</div>
 
 			</div>
 			<div class="row">
@@ -76,7 +84,7 @@
 											<p class="price">${{random_product.price}}</p>
 										</div>
 									</li>
-											{% endfor %}
+									{% endfor %}
 								</ul>
 							</div>
 
