added update for quantity in cart_html and context_processors for categories

--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -63,7 +63,7 @@
 			{%endif%}
 
 		</div>
-		{% include 'includes/category_card.html' %}
+<!--		{% include 'includes/category_card.html' %}-->
 	</div>
 </section>
 
