--- a/cart/templates/cart_detail.html
+++ b/cart/templates/cart_detail.html
@@ -4,50 +4,58 @@
 {% endblock%}
 
 {% block content %}
-<section class="main-content">
-	<div class="row">
-		<div class="span9">
-			<h4 class="title"><span class="text"><strong>Your</strong> Cart</span></h4>
-			<table class="table table-striped">
-				<thead>
-				<tr>
-					<th>Remove</th>
-					<th>Image</th>
-					<th>Product Name</th>
-					<th>Quantity</th>
-					<th>Unit Price</th>
-					<th>Total</th>
-				</tr>
-				</thead>
-				<tbody>
-				{% for item in cart %}
-				{% with product=item.product %}
-				<tr>
 
-					<td><a href="{{product.get_absolute_url}}"><img alt="NoPhoto" src="{{ product.image.url }}"></a></td>
-					<td>{{ product.name}}</td>
-					<td>{{item.quantity}}</td>
-					<td>${{item.price}}</td>
-					<td>${{item.total_price}}</td>
-				</tr>
-				{% endwith %}
-				{% endfor %}
+<div class="span9">
+	<h4 class="title"><span class="text"><strong>Your</strong> Cart</span></h4>
+	{% for item in cart %}
+	{% with product=item.product %}
+	<table class="table table-striped">
+		<thead>
+		<tr>
+			<th>Фото</th>
+			<th>Названия товара</th>
+			<th>Количество</th>
+			<th>Цена товара</th>
+			<th>Сумма</th>
+			<th>Удалить</th>
+		</tr>
+		</thead>
 
+		<tbody>
+		<tr>
+			<td><a href="{{product.get_absolute_url}}">
+				<img alt="NoPhoto" src="{{ product.image.url }}">
+			</a></td>
+			<td>{{ product.name }}</td>
+			<td>
+				<form action="{% url 'cart_add' product.id %}" method="post">
+					{{ item.update_quantity_form.quantity }}
+					{{ item.update_quantity_form.update }}
+					<input type="submit" value="Обнавить">
+					{% csrf_token %}
+				</form>
+			</td>
+			<td>${{item.price}}</td>
+			<td>${{item.total_price}}</td>
+			<td>
+				<a href="{% url 'cart_remove' product.id %}">Удалить</a>
+			</td>
+		</tr>
+		</tbody>
+	</table>
+	<hr>
+	{% endwith %}
+	{% endfor %}
+	<p class="cart-total right">
+		<strong>Общая сумма: </strong>${{cart.get_total_price}}<br>
+	</p>
+	<hr/>
+	<p class="buttons center">
+		<button class="btn" type="button">Update</button>
+		<button class="btn" type="button"><a href="{% url 'product-list' %}">Продолжить покупку</a></button>
+		<button class="btn btn-inverse" type="submit" id="checkout">Checkout</button>
+	</p>
+</div>
+{% include 'includes/category_card.html' %}
 
-				</tbody>
-			</table>
-			<hr>
-			<p class="cart-total right">
-				<strong>Общая сумма: </strong>${{cart.get_total_price}}<br>
-			</p>
-			<hr/>
-			<p class="buttons center">
-				<button class="btn" type="button">Update</button>
-				<button class="btn" type="button">Continue</button>
-				<button class="btn btn-inverse" type="submit" id="checkout">Checkout</button>
-			</p>
-		</div>
-		{% include 'includes/category_card.html' %}
-	</div>
-</section>
 {% endblock %}
