--- a/templates/base.html
+++ b/templates/base.html
@@ -1,184 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
 {% load static %}
-	<head>
-		<meta charset="utf-8">
-		<title>
-			{% block title %}
-				Main page
-			{% endblock %}
-		</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<!--[if ie]><meta content='IE=8' http-equiv='X-UA-Compatible'/><![endif]-->
-		<!-- bootstrap -->
-		<link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-		<link href="{% static 'bootstrap/css/bootstrap-responsive.min.css' %}" rel="stylesheet">
-		
-		<link href="{% static 'themes/css/bootstrappage.css' %}" rel="stylesheet"/>
-		
-		<!-- global styles -->
-		<link href="{% static 'themes/css/flexslider.css' %}" rel="stylesheet"/>
-		<link href="{% static 'themes/css/main.css' %}" rel="stylesheet"/>
+<head>
+	<meta charset="utf-8">
+	<title>
+		{% block title %}
+		Main page
+		{% endblock %}
+	</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="">
+	<!--[if ie]><meta content='IE=8' http-equiv='X-UA-Compatible'/><![endif]-->
+	<!-- bootstrap -->
+	<link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+	<link href="{% static 'bootstrap/css/bootstrap-responsive.min.css' %}" rel="stylesheet">
 
-		<!-- scripts -->
-		<script src="{% static 'themes/js/jquery-1.7.2.min.js' %}"></script>
-		<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
-		<script src="{% static 'themes/js/superfish.js' %}"></script>
-		<script src="{% static 'themes/js/jquery.scrolltotop.js' %}"></script>
-		<!--[if lt IE 9]>			
-			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-			<script src="{% static 'js/respond.min.js' %}"></script>
-		<![endif]-->
-	</head>
-    <body>		
-		<div id="top-bar" class="container">
-			<div class="row">
-				<div class="span4">
-					<form method="POST" class="search_form">
-						<input type="text" class="input-block-level search-query" Placeholder="eg. T-sirt">
-					</form>
-				</div>
-				<div class="span8">
-					<div class="account pull-right">
-						<ul class="user-menu">				
-							<li><a href="#">My Account</a></li>
+	<link href="{% static 'themes/css/bootstrappage.css' %}" rel="stylesheet"/>
 
-							<li>
-								{% with total_items=cart|length %}
-								{% if cart|length > 0 %}
-								Корзина:
-								<a href="cart.html">
-									{{total_items}}
-								</a>
-								{% else %}
-									Корзина: 0
-								{% endif %}
-								{% endwith %}
-							</li>
-							<li>Checkout</li>
-							<li><a href="{% static 'register.html' %}">Login</a></li>
-						</ul>
-					</div>
-				</div>
+	<!-- global styles -->
+	<link href="{% static 'themes/css/flexslider.css' %}" rel="stylesheet"/>
+	<link href="{% static 'themes/css/main.css' %}" rel="stylesheet"/>
+
+	<!-- scripts -->
+	<script src="{% static 'themes/js/jquery-1.7.2.min.js' %}"></script>
+	<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+	<script src="{% static 'themes/js/superfish.js' %}"></script>
+	<script src="{% static 'themes/js/jquery.scrolltotop.js' %}"></script>
+	<!--[if lt IE 9]>
+	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<script src="{% static 'js/respond.min.js' %}"></script>
+	<![endif]-->
+</head>
+<body>
+<div id="top-bar" class="container">
+	<div class="row">
+		<div class="span4">
+			<form method="POST" class="search_form">
+				<input type="text" class="input-block-level search-query" Placeholder="eg. T-sirt">
+			</form>
+		</div>
+		<div class="span8">
+			<div class="account pull-right">
+				<ul class="user-menu">
+					<li><a href="#">My Account</a></li>
+
+					<li>
+						{% with total_items=cart|length %}
+						{% if cart|length > 0 %}
+						Корзина:
+						<a href="cart.html">
+							{{total_items}}
+						</a>
+						{% else %}
+						Корзина: 0
+						{% endif %}
+						{% endwith %}
+					</li>
+					<li>Checkout</li>
+					<li><a href="{% static 'register.html' %}">Login</a></li>
+				</ul>
 			</div>
 		</div>
-		<div id="wrapper" class="container">
-			<section class="navbar main-menu">
-				<div class="navbar-inner main-menu">				
-					<a href="{% static 'index.html' %}" class="logo pull-left"><img src="{% static 'themes/images/logo.png' %}" class="site_logo" alt=""></a>
-					<nav id="menu" class="pull-right">
+	</div>
+</div>
+<div id="wrapper" class="container">
+	<section class="navbar main-menu">
+		<div class="navbar-inner main-menu">
+			<a href="{% static 'index.html' %}" class="logo pull-left"><img src="{% static 'themes/images/logo.png' %}" class="site_logo" alt=""></a>
+			<nav id="menu" class="pull-right">
+				<ul>
+					<li><a href="{% static './products.html' %}">Woman</a>
 						<ul>
-							<li><a href="{% static './products.html' %}">Woman</a>
-								<ul>
-									<li><a href="{% static './products.html' %}">Lacinia nibh</a></li>
-									<li><a href="{% static './products.html' %}">Eget molestie</a></li>
-									<li><a href="{% static './products.html' %}">Varius purus</a></li>
-								</ul>
-							</li>															
-							<li><a href="{% static './products.html' %}">Man</a></li>
-							<li><a href="{% static './products.html' %}">Sport</a>
-								<ul>									
-									<li><a href="{% static './products.html' %}">Gifts and Tech</a></li>
-									<li><a href="{% static './products.html' %}">Ties and Hats</a></li>
-									<li><a href="{% static './products.html' %}">Cold Weather</a></li>
-								</ul>
-							</li>							
-							<li><a href="{% static './products.html' %}">Hangbag</a></li>
-							<li><a href="{% static './products.html' %}">Best Seller</a></li>
-							<li><a href="{% static './products.html' %}">Top Seller</a></li>
+							<li><a href="{% static './products.html' %}">Lacinia nibh</a></li>
+							<li><a href="{% static './products.html' %}">Eget molestie</a></li>
+							<li><a href="{% static './products.html' %}">Varius purus</a></li>
 						</ul>
-					</nav>
-				</div>
-			</section>
-			<section  class="homepage-slider" id="home-slider">
-				<div class="flexslider">
-					<ul class="slides">
-						<li>
-							<img src="{% static 'themes/images/carousel/banner-1.jpg' %}" alt="" />
-						</li>
-						<li>
-							<img src="{% static 'themes/images/carousel/banner-2.jpg' %}" alt="" />
-							<div class="intro">
-								<h1>Mid season sale</h1>
-								<p><span>Up to 50% Off</span></p>
-								<p><span>On selected items online and in stores</span></p>
-							</div>
-						</li>
-					</ul>
-				</div>			
-			</section>
-			<section class="header_text">
-				We stand for top quality templates. Our genuine developers always optimized bootstrap commercial templates. 
-				<br/>Don't miss to use our cheap abd best bootstrap templates.
-			</section>
+					</li>
+					<li><a href="{% static './products.html' %}">Man</a></li>
+					<li><a href="{% static './products.html' %}">Sport</a>
+						<ul>
+							<li><a href="{% static './products.html' %}">Gifts and Tech</a></li>
+							<li><a href="{% static './products.html' %}">Ties and Hats</a></li>
+							<li><a href="{% static './products.html' %}">Cold Weather</a></li>
+						</ul>
+					</li>
+					<li><a href="{% static './products.html' %}">Hangbag</a></li>
+					<li><a href="{% static './products.html' %}">Best Seller</a></li>
+					<li><a href="{% static './products.html' %}">Top Seller</a></li>
+				</ul>
+			</nav>
+		</div>
+	</section>
+	<section  class="homepage-slider" id="home-slider">
+		<div class="flexslider">
+			<ul class="slides">
+				<li>
+					<img src="{% static 'themes/images/carousel/banner-1.jpg' %}" alt="" />
+				</li>
+				<li>
+					<img src="{% static 'themes/images/carousel/banner-2.jpg' %}" alt="" />
+					<div class="intro">
+						<h1>Mid season sale</h1>
+						<p><span>Up to 50% Off</span></p>
+						<p><span>On selected items online and in stores</span></p>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</section>
+	<section class="header_text">
+		We stand for top quality templates. Our genuine developers always optimized bootstrap commercial templates.
+		<br/>Don't miss to use our cheap abd best bootstrap templates.
+	</section>
+	<section class="main-content">
+		<div class="row">
 			{% block content %}
 
 			{% endblock %}
-			<section class="our_client">
-				<h4 class="title"><span class="text">Manufactures</span></h4>
-				<div class="row">					
-					<div class="span2">
-						<a href="#"><img alt="" src="{% static 'themes/images/clients/14.png' %}"></a>
-					</div>
-					<div class="span2">
-						<a href="#"><img alt="" src="{% static 'themes/images/clients/35.png' %}"></a>
-					</div>
-					<div class="span2">
-						<a href="#"><img alt="" src="{% static 'themes/images/clients/1.png' %}"></a>
-					</div>
-					<div class="span2">
-						<a href="#"><img alt="" src="{% static 'themes/images/clients/2.png' %}"></a>
-					</div>
-					<div class="span2">
-						<a href="#"><img alt="" src="{% static 'themes/images/clients/3.png' %}"></a>
-					</div>
-					<div class="span2">
-						<a href="#"><img alt="" src="{% static 'themes/images/clients/4.png' %}"></a>
-					</div>
-				</div>
-			</section>
-			<section id="footer-bar">
-				<div class="row">
-					<div class="span3">
-						<h4>Navigation</h4>
-						<ul class="nav">
-							<li><a href="{% static './index.html' %}">Homepage</a></li>
-							<li><a href="{% static './about.html' %}">About Us</a></li>
-							<li><a href="{% static './contact.html' %}">Contac Us</a></li>
-							<li><a href="{% static './cart.html' %}">Your Cart</a></li>
-							<li><a href="{% static './register.html' %}">Login</a></li>
-						</ul>					
-					</div>
-					<div class="span4">
-						<h4>My Account</h4>
-						<ul class="nav">
-							<li><a href="#">My Account</a></li>
-							<li><a href="#">Order History</a></li>
-							<li><a href="#">Wish List</a></li>
-							<li><a href="#">Newsletter</a></li>
-						</ul>
-					</div>
-					<div class="span5">
-						<p class="logo"><img src="{% static 'themes/images/logo.png' %}" class="site_logo" alt=""></p>
-						<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. the  Lorem Ipsum has been the industry's standard dummy text ever since the you.</p>
-						<br/>
-						<span class="social_icons">
+		</div>
+	</section>
+	<section class="our_client">
+		<h4 class="title"><span class="text">Manufactures</span></h4>
+		<div class="row">
+			<div class="span2">
+				<a href="#"><img alt="" src="{% static 'themes/images/clients/14.png' %}"></a>
+			</div>
+			<div class="span2">
+				<a href="#"><img alt="" src="{% static 'themes/images/clients/35.png' %}"></a>
+			</div>
+			<div class="span2">
+				<a href="#"><img alt="" src="{% static 'themes/images/clients/1.png' %}"></a>
+			</div>
+			<div class="span2">
+				<a href="#"><img alt="" src="{% static 'themes/images/clients/2.png' %}"></a>
+			</div>
+			<div class="span2">
+				<a href="#"><img alt="" src="{% static 'themes/images/clients/3.png' %}"></a>
+			</div>
+			<div class="span2">
+				<a href="#"><img alt="" src="{% static 'themes/images/clients/4.png' %}"></a>
+			</div>
+		</div>
+	</section>
+	<section id="footer-bar">
+		<div class="row">
+			<div class="span3">
+				<h4>Navigation</h4>
+				<ul class="nav">
+					<li><a href="{% static './index.html' %}">Homepage</a></li>
+					<li><a href="{% static './about.html' %}">About Us</a></li>
+					<li><a href="{% static './contact.html' %}">Contac Us</a></li>
+					<li><a href="{% static './cart.html' %}">Your Cart</a></li>
+					<li><a href="{% static './register.html' %}">Login</a></li>
+				</ul>
+			</div>
+			<div class="span4">
+				<h4>My Account</h4>
+				<ul class="nav">
+					<li><a href="#">My Account</a></li>
+					<li><a href="#">Order History</a></li>
+					<li><a href="#">Wish List</a></li>
+					<li><a href="#">Newsletter</a></li>
+				</ul>
+			</div>
+			<div class="span5">
+				<p class="logo"><img src="{% static 'themes/images/logo.png' %}" class="site_logo" alt=""></p>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. the  Lorem Ipsum has been the industry's standard dummy text ever since the you.</p>
+				<br/>
+				<span class="social_icons">
 							<a class="facebook" href="#">Facebook</a>
 							<a class="twitter" href="#">Twitter</a>
 							<a class="skype" href="#">Skype</a>
 							<a class="vimeo" href="#">Vimeo</a>
 						</span>
-					</div>					
-				</div>	
-			</section>
-			<section id="copyright">
-				<span>Copyright 2013 bootstrappage template  All right reserved.</span>
-			</section>
+			</div>
 		</div>
-		<script src="{% static 'themes/js/common.js' %}"></script>
-		<script src="{% static 'themes/js/jquery.flexslider-min.js' %}"></script>
-		<script type="{% static 'text/javascript' %}">
+	</section>
+	<section id="copyright">
+		<span>Copyright 2013 bootstrappage template  All right reserved.</span>
+	</section>
+</div>
+<script src="{% static 'themes/js/common.js' %}"></script>
+<script src="{% static 'themes/js/jquery.flexslider-min.js' %}"></script>
+<script type="{% static 'text/javascript' %}">
 			$(function() {
 				$(document).ready(function() {
 					$('.flexslider').flexslider({
@@ -192,5 +196,5 @@
 				});
 			});
 		</script>
-    </body>
+</body>
 </html>
