--- a/templates/base.html
+++ b/templates/base.html
@@ -117,6 +117,7 @@
 			{% block content %}
 
 			{% endblock %}
+			{% include 'includes/category_card.html' %}
 		</div>
 	</section>
 	<section class="our_client">
