--- a/products/templates/includes/category_card.html
+++ b/products/templates/includes/category_card.html
@@ -1,9 +1,10 @@
+
 <div class="span3 col">
 	<div class="block">
 		<ul class="nav nav-list">
 			<li {% if not category %} class="nav-header" {% endif %}>
 				<a href="{% url 'product-list' %}">
-					ALL CATEGORIES
+					Все категории
 				</a>
 			</li>
 			{% for c in categories %}
@@ -19,10 +20,9 @@
 			<li><a href="products.html">Yamaha</a></li>
 		</ul>
 	</div>
-
 	<div class="block">
 		<h4 class="title">
-			<span class="pull-left"><span class="text">Randomize</span></span>
+			<span class="pull-left"><span class="text">Новые товары</span></span>
 			<span class="pull-right">
 
 				<a class="left button" href="{{ latest_post.prev_url }}" data-slide="prev"></a>
@@ -37,33 +37,27 @@
 						{%for latest_product in latest_products %}
 						<li class="span3">
 							<div class="product-box">
-<!--								<span class="sale_tag"></span>-->
 								<img alt="" src="{{latest_product.image.url}}"><br/>
 								<a href="{{latest_product.get_absolute_url}}" class="title">{{latest_product.name}}</a><br/>
 								<a href="#" class="category">Code product: {{latest_product.id}}</a>
 								<p class="price">${{latest_product.price}}</p>
 							</div>
 						</li>
-								{% endfor %}
+						{% endfor %}
 					</ul>
 				</div>
-
 			</div>
 		</div>
-
-
 	</div>
 	<div class="block">
 		<h4 class="title"><strong>Best</strong> Seller</h4>
 		<ul class="small-product">
-
 			<li>
 				<a href="#" title="Praesent tempor sem sodales">
 					<img src="/static/themes/images/ladies/3.jpg" alt="Praesent tempor sem sodales">
 				</a>
 				<a href="#">Praesent tempor sem</a>
 			</li>
-
 		</ul>
 	</div>
 </div>
