--- a/templates/base.html
+++ b/templates/base.html
@@ -56,8 +56,8 @@
 						{% endif %}
 						{% endwith %}
 					</li>
-					<li>Checkout</li>
-					<li><a href="{% static 'register.html' %}">Login</a></li>
+					<li><a href="">Checkout</a></li>
+					<li><a href="{% url 'login' %}">Login</a></li>
 				</ul>
 			</div>
 		</div>
